--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jackie Robson",
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -16,7 +16,14 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.15.4",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^3.2.0",
     "redux": "^3.7.2",
     "webpack": "^3.6.0"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   }
 }
