--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node server.js"
+    "dev": "node server.js & webpack"
   },
   "keywords": [],
   "author": "Jackie Robson",
@@ -17,6 +17,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "express": "^4.15.4",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
